--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,11 @@ ul {
   padding: 0;
   margin: 0;
 }
+
+h3 {
+  font-size: 4rem;
+  font-weight: 200;
+  color: white;
+  margin: 0;
+  padding: 0;
+}
