error boundary defined & working, adding propTypes next

--- a/src/NoteArea.css
+++ b/src/NoteArea.css
@@ -11,6 +11,7 @@
     color: white;
     align-self: flex-start;
     margin-left: 1rem;
+    margin-bottom: 3rem;
     padding: 1rem;
     background-color: dimgray;
     border: 1px solid white;
