changed styling from dark to light theme to improve accessibility rating

--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@ ul {
 
 h3 {
   font-size: 4rem;
-  font-weight: 200;
-  color: white;
+  font-weight: 300;
+  color: black;
   margin: 0;
   padding: 0;
 }
