--- a/src/AddNote.css
+++ b/src/AddNote.css
@@ -6,7 +6,10 @@ Add Note page*/
     width: 80%;
     display: flex;
     flex-direction: column;
-    background-color: dimgray;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    background-color: white;
+    border: 1px solid black;
     padding-top: 3rem;
     padding-left: 1rem;
 }
@@ -24,7 +27,7 @@ Add Note page*/
     font-weight: 200;
     font-size: 2rem;
     margin-bottom: 1rem;
-    color: white;
+    color: black;
     display: block;
 }
 
@@ -53,11 +56,11 @@ Add Note page*/
 
 #cancelAddNote, #saveAddNote {
     font-size: 1.6rem;
-    color: white;
+    color: black;
     align-self: flex-end;
     padding: 1rem;
-    background-color: dimgray;
-    border: 1px solid white;
+    background-color: white;
+    border: 1px solid black;
     margin-right: 1rem;
     margin-bottom: 3rem;
 }
