--- a/src/Header.css
+++ b/src/Header.css
@@ -2,13 +2,13 @@ h1 {
     text-align: center;
     font-size: 7rem;
     font-weight: 200;
-    color: white;
-    background-color: dimgray;
+    color: black;
+    background-color: white;
     margin: 0;
     padding-top: 3rem;
     padding-bottom: 3rem;
 }
   
 header {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid black;
 }
