--- a/src/Nav.css
+++ b/src/Nav.css
@@ -2,7 +2,7 @@ nav {
     width: 20%;
     display: flex;
     flex-direction: column;
-    background-color: dimgray;
+    background-color: white;
     padding-top: 1rem;
 }
 
@@ -11,8 +11,8 @@ li {
 }
 
 .folder {
-    border: 1px solid white;
-    color: white;
+    border: 1px solid black;
+    color: black;
     text-align: right;
     font-size: 2.3rem;
     padding-right: 2rem;
@@ -22,9 +22,9 @@ li {
 }
 
 .selectedFolder {
-    background-color: white;
-    color: dimgray;
-    border: 1px solid white;
+    background-color: limegreen;
+    color: white;
+    border: 1px solid black;
     text-align: right;
     font-size: 2.3rem;
     padding-right: 2rem;
@@ -35,19 +35,19 @@ li {
 
 .addFolder__btn {
     font-size: 1.6rem;
-    color: white;
+    color: black;
     align-self: flex-end;
     padding: 1rem;
-    background-color: dimgray;
-    border: 1px solid white;
+    background-color: white;
+    border: 1px solid black;
     margin-bottom: 3rem;
 }
 
 #backButton {
     font-size: 1.6rem;
-    color: white;
+    color: black;
     align-self: flex-end;
     padding: 1rem;
-    background-color: dimgray;
-    border: 1px solid white;
+    background-color: white;
+    border: 1px solid black;
 }
