--- a/src/Note.css
+++ b/src/Note.css
@@ -3,8 +3,8 @@
     margin-bottom: 1rem;
     padding-left: 1rem;
     padding-bottom: 1rem;
-    border: 1px solid white;
-    color: white;
+    border: 1px solid black;
+    color: black;
     
 }
 
@@ -24,8 +24,8 @@
 #deleteNote {
     align-self: flex-start;
     font-size: 1.6rem;
-    color: white;
+    color: black;
     padding: 1rem;
-    background-color: dimgray;
-    border: 1px solid white;
+    background-color: white;
+    border: 1px solid black;
 }
