--- a/src/NoteArea.css
+++ b/src/NoteArea.css
@@ -2,17 +2,17 @@
     width: 80%;
     display: flex;
     flex-direction: column;
-    background-color: dimgray;
+    background-color: white;
     padding-top: 1rem;
 }
 
 .addNote__btn {
     font-size: 1.6rem;
-    color: white;
+    color: black;
     align-self: flex-start;
     margin-left: 1rem;
     margin-bottom: 3rem;
     padding: 1rem;
-    background-color: dimgray;
-    border: 1px solid white;
+    background-color: white;
+    border: 1px solid black;
 }
